--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
         <h3>
 <a id="112016-find-all-files-containing-a-given-string--encontrar-todos-los-archivos-que-contienen-un-string-dado" class="anchor" href="#112016-find-all-files-containing-a-given-string--encontrar-todos-los-archivos-que-contienen-un-string-dado" aria-hidden="true"><span class="octicon octicon-link"></span></a>[1/1/2016] Find all files containing a given string // Encontrar todos los archivos que contienen un string dado</h3>
 
-<pre><code>`grep -nrw /path/to/directory -e "string"`
+<pre><code>grep -nrw /path/to/directory -e "string"
 </code></pre>
       </section>
       <footer>
