minor html adjustments

--- a/index.html
+++ b/index.html
@@ -16,34 +16,54 @@
     <div class="wrapper">
       <header>
         <h1>kthxbye was already taken</h1>
-        <p>One-liner cookbook / Random thoughts / Facepalm here and there</p>
+        <p>One-liner cookbook</p>
 
+		<a href="https://github.com/kthxbyte">
+			<img alt="" class="avatar" height="230" src="https://avatars0.githubusercontent.com/u/1776463?v=3&amp;s=460" width="230" />
+			<h3 class="vcard-names">
+				<span class="vcard-username" itemprop="additionalName"><b>kthxbyte | Salvador Muñoz</b></span>
+			</h3>
+		</a>
 
-        <p class="view"><a href="https://github.com/kthxbyte">View My GitHub Profile</a></p>
+		<!-- Index -->
+        <div style="height:90px; overflow:auto"><small>
+          <a href="#112016-find-all-files-containing-a-given-string--encontrar-todos-los-archivos-que-contienen-un-string-dado">
+            * Find all files containing a given string
+          </a><br></small>
+        </div>
+        <!-- ./Index -->
 
       </header>
-      <section>
-        <h3>
-<a id="112016-find-all-files-containing-a-given-string--encontrar-todos-los-archivos-que-contienen-un-string-dado" class="anchor" href="#112016-find-all-files-containing-a-given-string--encontrar-todos-los-archivos-que-contienen-un-string-dado" aria-hidden="true"><span class="octicon octicon-link"></span></a>[1/1/2016] Find all files containing a given string // Encontrar todos los archivos que contienen un string dado</h3>
 
-<pre><code>grep -nrw /path/to/directory -e "string"
-</code></pre>
+      <!-- Articles -->
+      <section>
+        <hr>
+        <h3>
+          <a id="112016-find-all-files-containing-a-given-string--encontrar-todos-los-archivos-que-contienen-un-string-dado" class="anchor" href="#112016-find-all-files-containing-a-given-string--encontrar-todos-los-archivos-que-contienen-un-string-dado" aria-hidden="true"><span class="octicon octicon-link"></span></a>// Find all files containing a given string<br>// Encontrar todos los archivos que contienen un string dado<br>
+        </h3>
+        <pre><code>grep -nrw /path/to/directory -e "string"</code></pre>
+        <sub>[ January 1, 2016 ] While thinking about #unix #grep #filesearch #needle #haystack</sub>
       </section>
+      <!-- ./Articles -->
+
       <footer>
-        <p><small>Hosted on GitHub Pages &mdash; Theme by <a href="https://github.com/orderedlist">orderedlist</a></small></p>
+        <p><small>Hosted on GitHub Pages &mdash; Theme by <a href="https://github.com/orderedlist">orderedlist</a></small>
+        <br><small>Escuchar reggaeton puede producir cáncer</small></p>
       </footer>
     </div>
     <script src="javascripts/scale.fix.js"></script>
-              <script type="text/javascript">
-            var gaJsHost = (("https:" == document.location.protocol) ? "https://ssl." : "http://www.");
-            document.write(unescape("%3Cscript src='" + gaJsHost + "google-analytics.com/ga.js' type='text/javascript'%3E%3C/script%3E"));
-          </script>
-          <script type="text/javascript">
-            try {
-              var pageTracker = _gat._getTracker("UA-71895140-1");
-            pageTracker._trackPageview();
-            } catch(err) {}
-          </script>
+
+    <script type="text/javascript">
+      var gaJsHost = (("https:" == document.location.protocol) ? "https://ssl." : "http://www.");
+      document.write(unescape("%3Cscript src='" + gaJsHost + "google-analytics.com/ga.js' type='text/javascript'%3E%3C/script%3E"));
+    </script>
+
+    <script type="text/javascript">
+      try {
+        var pageTracker = _gat._getTracker("UA-71895140-1");
+        pageTracker._trackPageview();
+      } catch(err) {}
+    </script>
 
   </body>
 </html>
