--- a/index.html
+++ b/index.html
@@ -27,11 +27,15 @@
 
 		<!-- Index -->
         <div style="height:90px; overflow:auto"><small>
-          <a href="#112016-find-all-files-containing-a-given-string--encontrar-todos-los-archivos-que-contienen-un-string-dado">
-            * Find all files containing a given string
+			
+          <a href="#08012016-display-json-as-a-jstree">
+            * Display JSON as a jsTree
           </a><br>
           <a href="#08012016-fosuserbundle-routes">
             * FOSUserBundle routes
+          </a><br>
+          <a href="#112016-find-all-files-containing-a-given-string--encontrar-todos-los-archivos-que-contienen-un-string-dado">
+            * Find all files containing a given string
           </a><br>
           </small>
         </div>
@@ -40,6 +44,18 @@
       </header>
 
       <!-- Articles -->
+
+      <section>
+        <hr>
+        <h3>
+          <a id="08012016-display-json-as-a-jstree" class="anchor" href="#08012016-display-json-as-a-jstree" aria-hidden="true">
+			  <span class="octicon octicon-link"></span>
+			  </a>// Display JSON as a jsTree<br>// Desplegar JSON como un jsTree<br>
+        </h3>
+        <pre><a href="https://jsfiddle.net/z3w9ar2k/">https://jsfiddle.net/z3w9ar2k/</a></pre>
+        <sub>[ January 8, 2016 ] While thinking about #json #jstree</sub>
+      </section>
+
       <section>
         <hr>
         <h3>
