--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
 		</a>
 
 		<!-- Index -->
-        <div style="height:90px; overflow:auto"><small>
+<!--        <div style="height:90px; overflow:auto"><small>
 			
           <a href="#08012016-display-json-as-a-jstree">
             * Display JSON as a jsTree
@@ -38,12 +38,22 @@
             * Find all files containing a given string
           </a><br>
           </small>
-        </div>
+        </div>-->
         <!-- ./Index -->
 
       </header>
 
       <!-- Articles -->
+      <section>
+        <hr>
+        <h3>
+          <a id="10012016-json-viewer" class="anchor" href="#10012016-json-viewer" aria-hidden="true">
+			  <span class="octicon octicon-link"></span>
+			  </a>// JSON tree view, using data from Pastebin<br>// Vista de arbol de JSON, tomando datos desde Pastebin<br>
+        </h3>
+        <pre><a href="http://kthxbyte.github.io/json/index.html">http://kthxbyte.github.io/json/index.html</a></pre>
+        <sub>[ January 10, 2016 ] While thinking about #json #jstree #pastebin</sub>
+      </section>
 
       <section>
         <hr>
