--- a/index.html
+++ b/index.html
@@ -47,9 +47,20 @@
       <section>
         <hr>
         <h3>
+          <a id="12012016-count-files-inside-a-directory" class="anchor" href="#12012016-count-files-inside-a-directory" aria-hidden="true">
+			  <span class="octicon octicon-link"></span>
+			  </a>// Counting files inside a directory<br>// Contando archivos dentro de un directorio<br>
+        </h3>
+        <pre><code>find /path/to/directory -type f | wc -l</code></pre>
+        <sub>[ January 12, 2016 ] While thinking about #unix #shell #find #filecount</sub>
+      </section>
+
+      <section>
+        <hr>
+        <h3>
           <a id="10012016-json-viewer" class="anchor" href="#10012016-json-viewer" aria-hidden="true">
 			  <span class="octicon octicon-link"></span>
-			  </a>// JSON tree view, using data from Pastebin<br>// Vista de arbol de JSON, tomando datos desde Pastebin<br>
+			  </a>// JSON tree view, using data from Pastebin<br>// Vista de arbol de JSON, utilizando datos desde Pastebin<br>
         </h3>
         <pre><a href="http://kthxbyte.github.io/json/index.html">http://kthxbyte.github.io/json/index.html</a></pre>
         <sub>[ January 10, 2016 ] While thinking about #json #jstree #pastebin</sub>
@@ -104,7 +115,7 @@ fos_user_change_password               GET|POST ANY    ANY  /profile/change-pass
           <a id="112016-find-all-files-containing-a-given-string--encontrar-todos-los-archivos-que-contienen-un-string-dado" class="anchor" href="#112016-find-all-files-containing-a-given-string--encontrar-todos-los-archivos-que-contienen-un-string-dado" aria-hidden="true"><span class="octicon octicon-link"></span></a>// Find all files containing a given string<br>// Encontrar todos los archivos que contienen un string dado<br>
         </h3>
         <pre><code>grep -nrw /path/to/directory -e "string"</code></pre>
-        <sub>[ January 1, 2016 ] While thinking about #unix #grep #filesearch #needle #haystack</sub>
+        <sub>[ January 1, 2016 ] While thinking about #unix #shell #grep #filesearch #needle #haystack</sub>
       </section>
 
      
