--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
   <head>
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="chrome=1">
+    <meta name="google-site-verification" content="VjZ5n7D61YqcBjoTPjcL1ABrnu6sC5WDe4vPd5yofgw" />
     <title>kthxbye was already taken by kthxbyte</title>
 
     <link rel="stylesheet" href="stylesheets/styles.css">
