--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="chrome=1">
     <meta name="google-site-verification" content="VjZ5n7D61YqcBjoTPjcL1ABrnu6sC5WDe4vPd5yofgw" />
-    <title>kthxbye was already taken by kthxbyte</title>
+    <title>kthxbye was already taken</title>
 
     <link rel="stylesheet" href="stylesheets/styles.css">
     <link rel="stylesheet" href="stylesheets/github-light.css">
